--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,35 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline:0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
 
+:root {
+  --color-primary: #7c85ff;
+  --color-success: #00c88e;
+  --color-warning: #f7c94b;
+  --color-danger: #f75842;
+  --color-danger-variant: rgba(247, 88, 66, 0.4);
+  --color-white: #fff;
+  --color-light: rgba(255, 255, 255, 0.7);
+  --color-black: #000;
+  --color-bg: #1f2641;
+  --color-bg1: #2e3267;
+  --color-bg2: #424890;
 
+  --container-width-lg: 80%;
+  --container-width-md: 90%;
+  --container-width-sm: 94%;
+
+  --transition: all 400ms ease;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
