--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,35 @@ body{
   background: var(--color-bg);
 }
 
+.container{
+  width: var(--container-width-lg);
+  margin: 0 auto;
+
+}
+
+section {
+  padding: 6rem 0;
+}
+
+section h2 {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+h1, h2, h3, h4, h5 {
+  line-height: 1.2;;
+}
+
+h1{
+  font-size: 2.4rem;
+}
+
+h2{
+  font-size: 2.4rem;
+}
+h3{
+  font-size: 1.6rem;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
