--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,36 @@ h2{
 h3{
   font-size: 1.6rem;
 }
+
+h4{
+  font-size: 1.3rem;
+}
+
+a {
+  color: var(--color-white);
+}
+
+img{
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.btn{
+  display: inline-block;
+  background: var(--color-white);
+  color: var(--color-black);
+  padding: 1rem 2rem;
+  border: 1px solid transparent;
+  font-weight: 500;
+  transition: var(--transition);
+}
+
+.btn::hover {
+  background: transparent;
+  color: var(--color-white);
+  border-color: var(--color-white);
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
