--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,12 @@ img{
   color: var(--color-white);
   border-color: var(--color-white);
 }
+.btn-primary{
+  background: var(--color-danger);
+  color: var(--color-white);
+}
+
+/******** Navbar *******/
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
