--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,40 @@ img{
 }
 
 /******** Navbar *******/
+
+nav{
+  background: red;
+  width: 100vw;
+  height: 5rem;
+  position: fixed;
+  top: 0;
+  z-index: 11;
+}
+
+.nav__container{
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav button {
+  display: none;
+}
+
+.nav__menu{
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+
+.nav__menu a {
+  font-size: 0.9rem;
+}
+
+.nav__menu a:hover {
+  color: var(--color-bg2)
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
