--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ img{
 /******** Navbar *******/
 
 nav{
-  background: red;
+  background: transparent;
   width: 100vw;
   height: 5rem;
   position: fixed;
@@ -141,11 +141,33 @@ nav button {
 
 .nav__menu a {
   font-size: 0.9rem;
+  transition: var(--transition);
 }
 
 .nav__menu a:hover {
   color: var(--color-bg2)
 }
+
+/* Header ----------------------------------*/
+header{
+ position: relative;
+ top: 5rem;
+ overflow: hidden;
+ height: 70vh;
+ margin-bottom: 5rem;
+}
+
+
+.header__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 5rem;
+  height: 100%;
+
+}
+
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
