--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,9 @@ header{
 
 }
 
+.header__left p {
+  margin: 1rem 0 2.4rem;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
